# Python_Web_HW7

./: README.md  config.ini  main.py  my_select.py  pyproject.toml  seeds.py
alembic/: env.py
alembic/versions/: 01b3aa8841f9_init.py  44dcfac758b6_init.py
config/: db.py  models.py
