[tool.poetry]
name = "py-web-hw07"
version = "0.1.0"
description = ""
authors = ["Maksym Melnyk <maks.melnyk.94@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.25"
alembic = "^1.13.1"
poetry = "^1.7.1"
psycopg2-binary = "^2.9.9"
faker = "^22.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
